11.aug (ws)
      - fix #12048: Drag-selecting page identically selects others
      - fix #12047: Page Settings Preview doesn't udate
      - new: page selector for page settings preview
10.aug (ws)
      - new: scrollbar for navigator window
5.aug (ws)
      - fix #11891: Cannot drop symbols on any page except the first
      - fix #11890: Cannot drop time signatures on any page except the first
      - fix #11887: Texts on page after the first: weird editing
1.aug (ws)
      - fix #11834: Playback bar disappears on second page
      - fix #11819: Invisible text not drawn at all
      - fix #11815: dot for note longer than whole has wrong value
        (patch from Miwarre)
      - fix #11817: Headers and footers not drawn
      - experimental: beginning "inspector" panel
      - implement "flip" action for articulations; the right symbol is automatically
        choosen dependent on chord stem direction
30.jul (ws)
      - renamed "inspector" to "debugger"
      - fix #11804: double-clicking object in palette does not apply to note
        correctly
29.jul (ws)
      - task #11784: dev-experience: explanations for global CMakeList.txt
        (patch from mokaspar)
      - fix #11755: switching from fullscreen to normal makes toolbar unified
        (patch from mokaspar)
      - experimental: selecting slur enters edit mode
      - changed calculation of cubic bezier for slurs/ties
28.jul (ws)
      - fix #11709: slurs/ties across pages: slur/tie on second page is also shown
        on first page
27.jul (ws)
      - fix #11731: printing problems
      - fix #11707: Shortcuts not read back from .ini file (patch from Miwarre)
      - fix #11709: slur/tie across page break shown on wrong page
        (all spanner elements are affected)
26.jul (ws)
      - fix #11710: cannot select any element on pages other than first
      - add screen update after dropping image element
      - expose z-coordinate (stacking order) in image property dialog
25.jul (ws)